@@ -28,9 +28,9 @@ postgresql_driver:   org.postgresql.Driver
 # the url used by the jdbc to connect to the postgresql database through
 postgresql_url:      jdbc:postgresql://localhost:5432/
 # As with postgresql_user, but for Oracle databases
-oracle_user:         lvh
+oracle_user:         thp
 # As with postgresql_password, but for Oracle databases
-oracle_password:     lvh
+oracle_password:     thp
 # As with postgresql_driver, but for Oracle databases
 oracle_driver:   oracle.jdbc.driver.OracleDriver
 # As with postgresql_url, but for Oracle databases
@@ -103,7 +103,8 @@ harvestdone:  	 HarvestDone
 harvestfailure:	 HarvestFailure
 # number of files to process in batches
 maxtoharvest: 1000
-
+# Select with priority from ES 
+usepriorityfield: false
 
 # PIDMANAGER: configuration of the fedora pid manager
 [pidmanager]
