@@ -1,4 +1,5 @@
 1.5.0
+   - bug [12582] "Datadock skal kunne prioritere pakker fra ES"
    - bug [12538] "Datoer gemmes som VARCHAR i køen. Skal ændres til DATE"
    - bug [12435] "ojdbc14.jar virker tilsyneladende ikke op imod Oracle11"
    - bug [12371] "Datadock dør med outOfMemoryException"
